--- a/Azure-RMSDocs/index.yml
+++ b/Azure-RMSDocs/index.yml
@@ -1,72 +1,79 @@
-### YamlMime:YamlDocument
-documentType: LandingData
+### YamlMime:Landing
 title: Documentation sur Azure Information Protection
+summary: Contrôlez et sécurisez les e-mails, les documents et les données sensibles à l’intérieur comme à l’extérieur de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Azure Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
 metadata:
   title: Documentation sur Azure Information Protection
-  description: 'Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise.'
+  description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise.
   services: information-protection
-  author: msmbaldwin
-  manager: barbkess
   ms.service: information-protection
-  ms.tgt_pltfrm: na
-  ms.devlang: na
   ms.topic: landing-page
-  ms.date: 01/30/2019
-  ms.author: mbaldwin
-  layout: LandingPage
-abstract:
-  description: 'Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Azure Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.'
-sections:
-  - title: null
-    items:
-      - type: list
-        style: cards
-        className: cardsFTitle
-        items:
-          - title: En savoir plus sur Azure Information Protection
-            href: what-is-information-protection.md
-            image:
-              src: 'https://docs.microsoft.com/media/common/i_learn-about.svg'
-              href: what-is-information-protection.md
-          - title: Bien démarrer avec Azure Information Protection
-            href: quickstart-viewpolicy.md
-            image:
-              src: 'https://docs.microsoft.com/media/common/i_quick-start.svg'
-              href: quickstart-viewpolicy.md
-          - title: "Explorer Microsoft\_365, solution complète qui comprend Azure Information Protection"
-            href: 'https://docs.microsoft.com/microsoft-365/'
-            image:
-              src: /office/media/icons/caret-right-blue.svg
-              href: 'https://docs.microsoft.com/microsoft-365/'
-  - title: Guides de démarrage rapide de 5 minutes
-    items:
-      - type: paragraph
-        text: Découvrez comment protéger vos données à l’aide des guides de démarrage rapide suivants.
-      - type: list
-        style: icon48
-        items:
-          - image:
-              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
-            text: Portail Azure
-            href: quickstart-viewpolicy.md
-          - image:
-              src: 'https://docs.microsoft.com/media/common/i_search.svg'
-            text: Rechercher vos informations sensibles
-            href: quickstart-findsensitiveinfo.md
-          - image:
-              src: 'https://docs.microsoft.com/media/common/i_config-tools.svg'
-            text: Configurer une étiquette
-            href: quickstart-label-dnf-protectedemail.md
-          - image:
-              src: 'https://docs.microsoft.com/media/common/i_categorize.svg'
-            text: Créer une étiquette
-            href: quickstart-label-specificusers.md
-  - title: Didacticiels pas à pas
-    items:
-      - type: paragraph
-        text: 'Découvrez comment modifier des stratégies, créer des étiquettes et configurer des paramètres.'
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/information-protection/infoprotect-quick-start-tutorial">Modifier la stratégie Azure Information Protection et créer une étiquette</a>
-          - html: "<a href=\"/azure/information-protection/infoprotect-settings-tutorial\">Configurer les paramètres de stratégie Azure\_Information\_Protection qui interagissent</a>"
+  ms.collection: M365-security-compliance
+  author: cabailey
+  ms.author: cabailey
+  manager: rkarlin
+  ms.date: 09/17/2019
+  ms.openlocfilehash: 326f521f2f160b6425db15e22084e02fbecd4f55
+  ms.sourcegitcommit: 569446a78a217288198bd499c03bd634f3a92f7e
+  ms.translationtype: HT
+  ms.contentlocale: fr-FR
+  ms.lasthandoff: 09/27/2019
+  ms.locfileid: "71342556"
+landingContent:
+- title: À propos d’Azure Information Protection
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Qu’est-ce qu’Azure Information Protection ?
+      url: what-is-information-protection.md
+    - text: Vue d’ensemble des étiquettes de sensibilité.
+      url: https://docs.microsoft.com/Office365/SecurityCompliance/sensitivity-labels
+- title: Prise en main
+  linkLists:
+  - linkListType: deploy
+    links:
+    - text: Configuration requise
+      url: requirements.md
+    - text: Appliquer automatiquement une étiquette de sensibilité
+      url: https://docs.microsoft.com/Office365/SecurityCompliance/apply-sensitivity-label-automatically
+    - text: Limiter l'accès à un contenu
+      url: https://docs.microsoft.com/Office365/SecurityCompliance/encryption-sensitivity-labels
+    - text: Installer et configurer le client d’étiquetage unifié
+      url: ./rms-client/clientv2-admin-guide.md
+- title: Bring your own key (BYOK)
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Planifier et implémenter votre clé de locataire
+      url: plan-implement-tenant-key.md
+- title: Classer et protéger les données dans des magasins de données locaux
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Rechercher les informations sensibles (préversion)
+      url: quickstart-findsensitiveinfo.md
+  - linkListType: how-to-guide
+    links:
+    - text: Déployer le scanneur (préversion)
+      url: deploy-aip-scanner.md
+- title: Surveiller l’utilisation des étiquettes et découvrir les informations sensibles
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Création centralisée de rapports (préversion)
+      url: reports-aip.md
+- title: Kit SDK Microsoft Information Protection
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: À propos du Kit de développement logiciel (SDK) MIP
+      url: /information-protection/develop/overview
+  - linkListType: quickstart
+    links:
+    - text: Installation et configuration
+      url: /information-protection/develop/setup-configure-mip
+    - text: Protection AD RMS
+      url: /information-protection/develop/quick-app-adrms
+  - linkListType: reference
+    links:
+    - text: Référence de l’API pour C++
+      url: /information-protection/develop/mip-sdk-reference
