--- a/Azure-RMSDocs/index.yml
+++ b/Azure-RMSDocs/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: cabailey
   manager: rkarlin
   ms.date: 09/17/2019
-  ms.openlocfilehash: 326f521f2f160b6425db15e22084e02fbecd4f55
-  ms.sourcegitcommit: 569446a78a217288198bd499c03bd634f3a92f7e
+  ms.openlocfilehash: 15c2a7d7fdc458ab522554dd3420ada811791723
+  ms.sourcegitcommit: 28c1de5f9d1426f160f0e0bafcf9f76769e662b6
   ms.translationtype: HT
   ms.contentlocale: fr-FR
-  ms.lasthandoff: 09/27/2019
-  ms.locfileid: "71342556"
+  ms.lasthandoff: 09/30/2019
+  ms.locfileid: "71679161"
 landingContent:
 - title: À propos d’Azure Information Protection
   linkLists:
@@ -25,35 +25,47 @@ landingContent:
     links:
     - text: Qu’est-ce qu’Azure Information Protection ?
       url: what-is-information-protection.md
-    - text: Vue d’ensemble des étiquettes de sensibilité.
-      url: https://docs.microsoft.com/Office365/SecurityCompliance/sensitivity-labels
+    - text: Forum aux questions
+      url: faqs.md
 - title: Prise en main
   linkLists:
-  - linkListType: deploy
+  - linkListType: overview
     links:
     - text: Configuration requise
       url: requirements.md
-    - text: Appliquer automatiquement une étiquette de sensibilité
-      url: https://docs.microsoft.com/Office365/SecurityCompliance/apply-sensitivity-label-automatically
-    - text: Limiter l'accès à un contenu
-      url: https://docs.microsoft.com/Office365/SecurityCompliance/encryption-sensitivity-labels
-    - text: Installer et configurer le client d’étiquetage unifié
-      url: ./rms-client/clientv2-admin-guide.md
-- title: Bring your own key (BYOK)
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Planifier et implémenter votre clé de locataire
-      url: plan-implement-tenant-key.md
-- title: Classer et protéger les données dans des magasins de données locaux
-  linkLists:
   - linkListType: quickstart
     links:
-    - text: Rechercher les informations sensibles (préversion)
+    - text: Bien démarrer dans le portail Azure
+      url: quickstart-viewpolicy.md
+    - text: Rechercher des informations sensibles
       url: quickstart-findsensitiveinfo.md
+  - linkListType: deploy
+    links:
+    - text: Feuille de route pour le déploiement
+      url: deployment-roadmap.md
+- title: Personnaliser le client
+  linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Déployer le scanneur (préversion)
+    - text: 'Client classique : Paramètres avancés'
+      url: ./rms-client/client-admin-guide-customizations.md
+    - text: 'Client d’étiquetage unifié : Paramètres avancés'
+      url: ./rms-client/clientv2-admin-guide-customizations.md
+- title: Activer les étiquettes unifiées
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Comparer les clients
+      url: ./rms-client/use-client.md#choose-which-azure-information-protection-client-to-use
+  - linkListType: how-to-guide
+    links:
+    - text: Migrer des étiquettes Azure Information Protection
+      url: configure-policy-migrate-labels.md
+- title: Classer et protéger les données dans des magasins de données locaux
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Déployer le scanneur
       url: deploy-aip-scanner.md
 - title: Surveiller l’utilisation des étiquettes et découvrir les informations sensibles
   linkLists:
