--- a/mip/develop/toc.yml
+++ b/mip/develop/toc.yml
@@ -371,5 +371,5 @@
       href: 'https://azure.microsoft.com/resources/samples/?sort=0&term=mip+sdk'
     - name: Meilleures pratiques en matière de sécurité
       href: /azure/information-protection/develop/security-guidelines?context=/information-protection/develop/rc/rc
-    - name: Nouveautés de la version 1.1
-      href: 'https://techcommunity.microsoft.com/t5/Microsoft-Information-Protection/MIP-SDK-1-1-Now-GA/ba-p/328325'
+    - name: Historique des versions
+      href: version-release-history.md
