--- a/Azure-RMSDocs/toc.yml
+++ b/Azure-RMSDocs/toc.yml
@@ -369,13 +369,13 @@
               href: ./develop/api-reference-4-2.md
               items:
                 - name: Informations de référence sur l’API Android
-                  href: 'https://msdn.microsoft.com/library/dn758245.aspx'
+                  href: /previous-versions/windows/desktop/msipcthin2/ios
                 - name: Informations de référence sur l’API Linux
                   href: ./develop/linux-c-api-reference.md
                 - name: "Informations de référence sur l’API iOS / OS\_X"
-                  href: 'https://msdn.microsoft.com/library/dn758306.aspx'
+                  href: /previous-versions/windows/desktop/msipcthin2/ios
                 - name: Référence de l’API Windows
-                  href: 'https://msdn.microsoft.com/library/dn891914.aspx'
+                  href: /previous-versions/windows/desktop/msipcthin2/winrt
         - name: "Rights Management SDK\_2.1"
           href: ./develop/microsoft-information-protection-and-control-client-portal.md
           items:
@@ -443,15 +443,15 @@
               href: ./develop/api-reference-2-1.md
               items:
                 - name: Constantes
-                  href: 'https://msdn.microsoft.com/library/hh535291.aspx'
+                  href: /previous-versions/windows/desktop/msipc/msipc-constants
                 - name: Types de données
-                  href: 'https://msdn.microsoft.com/library/hh535288.aspx'
+                  href: /previous-versions/windows/desktop/msipc/microsoft-information-protection-and-control-client-data-types
                 - name: Fonctions
-                  href: 'https://msdn.microsoft.com/library/hh535289.aspx'
+                  href: /previous-versions/windows/desktop/msipc/microsoft-information-protection-and-control-client-functions
                 - name: Structures
-                  href: 'https://msdn.microsoft.com/library/hh535294.aspx'
+                  href: /previous-versions/windows/desktop/msipc/msipc-structures
                 - name: Codes d'erreur
-                  href: 'https://msdn.microsoft.com/library/hh535248.aspx'
+                  href: /previous-versions/windows/desktop/msipc/error-codes
         - name: Terminologie
 - name: Ressources
   items:
