--- a/Azure-RMSDocs/index.yml
+++ b/Azure-RMSDocs/index.yml
@@ -8,16 +8,16 @@ metadata:
   ms.service: information-protection
   ms.topic: landing-page
   ms.collection: M365-security-compliance
-  author: cabailey
-  ms.author: cabailey
+  author: mlottner
+  ms.author: mlottner
   manager: rkarlin
-  ms.date: 11/01/2019
-  ms.openlocfilehash: da2c47f0e33f861a342f290f5a6edfccf72a7d66
-  ms.sourcegitcommit: bc45a127fc4d5871f6e7b3bba8774bcfb194397a
+  ms.date: 04/02/2019
+  ms.openlocfilehash: 28aee5d35982e832cbe6a43782a3b9c7a85700ee
+  ms.sourcegitcommit: 1737dba8750a9cbacc7a7f2dd009e1902c86fc19
   ms.translationtype: HT
   ms.contentlocale: fr-FR
-  ms.lasthandoff: 11/29/2019
-  ms.locfileid: "74661819"
+  ms.lasthandoff: 04/02/2020
+  ms.locfileid: "80587499"
 landingContent:
 - title: À propos d’Azure Information Protection
   linkLists:
@@ -49,11 +49,9 @@ landingContent:
   linkLists:
   - linkListType: whats-new
     links:
-    - text: Mises à jour de la documentation pour novembre
-      url: https://techcommunity.microsoft.com/t5/Azure-Information-Protection/Azure-Information-Protection-Documentation-Update-for-November/ba-p/1031924
     - text: 5 sessions Ignite principales recommandées
       url: what-is-information-protection.md#microsoft-ignite
-    - text: Détails de la version 2.5.33.0 - Client d’étiquetage unifié
+    - text: Détails de la version 2.6.111.0 - Client d’étiquetage unifié
       url: ./rms-client/unifiedlabelingclient-version-release-history.md#version-25330
 - title: Classer et protéger les données dans des magasins de données locaux
   linkLists:
