--- a/mip/develop/toc.yml
+++ b/mip/develop/toc.yml
@@ -21,13 +21,19 @@
               href: quick-file-list-labels-cpp.md
             - name: Définir/obtenir des étiquettes de sensibilité (C++)
               href: quick-file-set-get-label-cpp.md
+            - name: Abaissement d’une étiquette de sensibilité sur un fichier (C++)
+              href: quick-file-justify-actions-cpp.md
+            - name: Réédition de l’API de fichier (C++)
+              href: quick-file-republishing-cpp.md
+            - name: Traiter les fichiers e-mail .msg (C++)
+              href: quick-email-msg-cpp.md
         - name: API de protection
           items:
             - name: Initialisation d’applications (C++)
               href: quick-protection-app-initialization-cpp.md
-            - name: Modèles de liste
+            - name: Lister les modèles (C++)
               href: quick-protection-list-templates-cpp.md
-            - name: Chiffrer/déchiffrer du texte
+            - name: Chiffrer/déchiffrer du texte (C++)
               href: quick-protection-encrypt-decrypt-text-cpp.md
     - name: 'C#'
       items:
@@ -39,13 +45,19 @@
               href: quick-file-list-labels-csharp.md
             - name: 'Définir/obtenir des étiquettes de sensibilité (C#)'
               href: quick-file-set-get-label-csharp.md
+            - name: 'Abaissement d’une étiquette de sensibilité sur un fichier (C#)'
+              href: quick-file-justify-actions-csharp.md
+            - name: 'Réédition de l’API de fichier (C#)'
+              href: quick-file-republishing-csharp.md
+            - name: 'Traiter les fichiers e-mail .msg (C#)'
+              href: quick-email-msg-csharp.md
         - name: API de protection
           items:
             - name: 'Initialisation d’applications (C#)'
               href: quick-protection-app-initialization-csharp.md
-            - name: Modèles de liste
+            - name: 'Répertorier les modèles (C#)'
               href: quick-protection-list-templates-csharp.md
-            - name: Chiffrer/déchiffrer du texte
+            - name: 'Chiffrer/déchiffrer du texte (C#)'
               href: quick-protection-encrypt-decrypt-text-csharp.md
 - name: Concepts
   items:
@@ -119,6 +131,14 @@
           href: concept-async-observers-protection-cpp.md
     - name: Télémétrie SDK
       href: concept-mip-telemetry.md
+    - name: Cas d’usage
+      items:
+        - name: API de fichier - Justification d’action pour abaisser une étiquette de sensibilité sur un fichier (C++)
+          href: concept-justification-cpp.md
+        - name: API de fichier - réédition (C++)
+          href: concept-republishing-cpp.md
+        - name: API de fichier - Traiter les fichiers e-mail .msg (C++)
+          href: concept-email-cpp.md
 - name: Référence
   items:
     - name: Bibliothèque C++
